--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.71"
+clap = { version = "4.3.4", features = ["derive"] }
+ezio = "0.1.2"
+thiserror = "1.0.40"
