--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
+ariadne = "0.3.0"
 chumsky = "0.9.2"
 clap = { version = "4.3.4", features = ["derive"] }
 ezio = "0.1.2"
