--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ ariadne = "0.3.0"
 chumsky = "0.9.2"
 clap = { version = "4.3.4", features = ["derive"] }
 ezio = "0.1.2"
+rustyline = "12.0.0"
 thiserror = "1.0.40"
